repair screen on mobile device

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -574,10 +574,6 @@ html,
   position: relative;
 }
 
-.sticky {
-  position: sticky;
-}
-
 .inset-0 {
   inset: 0px;
 }
@@ -596,10 +592,6 @@ html,
 
 .top-0 {
   top: 0px;
-}
-
-.top-10 {
-  top: 2.5rem;
 }
 
 .z-10 {
@@ -625,18 +617,6 @@ html,
 
 .mt-5 {
   margin-top: 1.25rem;
-}
-
-.mt-20 {
-  margin-top: 5rem;
-}
-
-.mb-20 {
-  margin-bottom: 5rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
 }
 
 .block {
@@ -671,8 +651,8 @@ html,
   height: 13rem;
 }
 
-.h-80 {
-  height: 20rem;
+.h-72 {
+  height: 18rem;
 }
 
 .h-\[90vh\] {
@@ -685,14 +665,6 @@ html,
 
 .h-screen {
   height: 100vh;
-}
-
-.h-5\/6 {
-  height: 83.333333%;
-}
-
-.h-72 {
-  height: 18rem;
 }
 
 .w-1\/2 {
@@ -1118,10 +1090,6 @@ html,
 @media (min-width: 768px) {
   .md\:static {
     position: static;
-  }
-
-  .md\:fixed {
-    position: fixed;
   }
 
   .md\:h-\[480px\] {
